# mantra_gui

./: .gitignore  CMakeLists.txt  mainpage.dox  package.xml
include/mantra_gui/: main_window.hpp  qnode.hpp  rviz.hpp  script_controll.h
py/: pyTranslator.py
src/: main.cpp  main_window.cpp  qnode.cpp  rviz.cpp  script_controll.cpp
ui/: main_window.ui
